# datatemplates

./: .gitignore  .mergify.yml  .travis.yml  LICENSE  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml  python-publish.yaml  test.yml
doc/: Makefile
doc/source/: cli.rst  conf.py  csv.rst  dbm.rst  history.rst  import-module.rst  index.rst  inline.rst  install.rst  inventory.csv  json.rst  legacy.rst  make_dbm.py  multiple-sources.rst  nodata.rst  nothing.rst  part-details.yaml  sample-multiple.yaml  sample.csv  sample.json  sample.xml  sample.yaml  sampledbm.dir  scandir.rst  using.rst  xml.rst  yaml.rst
doc/source/_templates/: csv-sample.tmpl  dbm-sample.tmpl  import-module-sample.tmpl  inventory.tmpl  sample-multiple.tmpl  sample.tmpl  scandir-sample.tmpl  xml-sample.tmpl
doc/source/sample-data/: sample.json
doc/source/samples/: csv.rst  dbm.rst  import-module.rst  json.rst  xml.rst  yaml.rst
sphinxcontrib/datatemplates/: __init__.py  cli.py  directive.py  domain.py  helpers.py  legacy.py  loaders.py  mixins.py  standalone.py
sphinxcontrib/datatemplates/tests/: test_loaders.py  test_loaders_csv.py
tests/: conftest.py  test_custom_template_bridge.py  test_errors.py  test_loaders.py
tests/custom_template_bridge/lib/: template_bridge.py
tests/testdata/test-custom-template-bridge/: conf.py  index.rst
tests/testdata/test-custom-template-bridge/templates/: sample.tmpl
tests/testdata/test-empty-source/: index.rst
tests/testdata/test-empty-template/: index.rst
tests/testdata/test-incorrect-dbm/: index.rst
tests/testdata/test-incorrect-import-module/: index.rst
tests/testdata/test-incorrect-json-syntax/: conf.py  sample.json
tests/testdata/test-incorrect-template-syntax/templates/: sample.tmpl
tests/testdata/test-incorrect-xml-syntax/: index.rst  sample.xml
tests/testdata/test-incorrect-xml-syntax/templates/: sample.tmpl
tests/testdata/test-incorrect-yaml-syntax/: index.rst  sample.yaml
tests/testdata/test-incorrect-yaml-syntax/templates/: sample.tmpl
tests/testdata/test-nonexistent-source/: index.rst
tests/testdata/test-nonexistent-source/templates/: sample.tmpl
tests/testdata/test-nonexistent-template/: index.rst  sample.json
tests/testdata/test-nonexistent-template-filter/templates/: sample.tmpl
tools/: check_package.sh  travis.sh
