[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxcontrib.datatemplates"
readme = "README.rst"
authors = [
  {name = "Doug Hellmann", email = "doug@doughellmann.com"},
]
description = "Sphinx extension for rendering data files as nice HTML"
dynamic = ["version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Utilities",
]

requires-python = ">=3.8"

dependencies = [
    "Sphinx",
    "PyYAML",
    "defusedxml",
    "sphinxcontrib-runcmd",
]

[project.scripts]
datatemplate = "sphinxcontrib.datatemplates.cli:main"

[project.urls]
homepage = "https://sphinxcontribdatatemplates.readthedocs.io/en/latest/"
repository = "http://github.com/sphinx-contrib/datatemplates"

[project.optional-dependencies]
linter = [
    "flake8",
]
test = [
    "pytest",
    "beautifulsoup4",
]
build = [
    "build",
    "twine",
]

[tools.setuptools]
packages = [
    "sphinxcontrib.datatemplates",
]

# https://github.com/pypa/setuptools_scm/
[tool.setuptools_scm]
write_to = "sphinxcontrib/datatemplates/version.py"
