[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sphinxcontrib.datatemplates"
readme = "README.rst"
authors = [{ name = "Doug Hellmann", email = "doug@doughellmann.com" }]
description = "Sphinx extension for rendering data files as nice HTML"
dynamic = ["version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Utilities",
]

requires-python = ">=3.11"

dependencies = ["Sphinx", "PyYAML", "defusedxml", "sphinxcontrib-runcmd"]

[project.scripts]
datatemplate = "sphinxcontrib.datatemplates.cli:main"

[project.urls]
homepage = "https://sphinxcontribdatatemplates.readthedocs.io/en/latest/"
repository = "http://github.com/sphinx-contrib/datatemplates"

[project.optional-dependencies]
linter = ["ruff"]
test = ["pytest", "beautifulsoup4"]
build = ["twine"]

[tool.hatch.version]
source = "vcs"
path = "sphinxcontrib/datatemplates/version.py"

[tool.hatch.build.targets.sdist]
include = ["sphinxcontrib/", "README.rst", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
only-include = ["sphinxcontrib"]

[tool.hatch.build]
exclude = ["/doc", "/tests", "/dist", "/build"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.test]
features = ["test", "linter", "build"]
dependencies = ["check-python-versions"]
[tool.hatch.envs.test.scripts]
test = "pytest tests"
lint = ["ruff check sphinxcontrib", "ruff format --check sphinxcontrib"]
lint-fix = ["ruff format sphinxcontrib"]
pkglint = [
    "hatch build",
    "twine check dist/*.tar.gz",
    "check-python-versions --only pyproject.toml,.github/workflows/test.yml",
]

[tool.hatch.envs.docs]
dependencies = ["sphinx"]
[tool.hatch.envs.docs.scripts]
build = "python -m sphinx.cmd.build -E -W -v -T doc/source doc/build"

[tool.flake8]
show-source = true
exclude = ".tox,dist,doc,*.egg,build"
