[metadata]
name = sphinxcontrib.datatemplates
description-file = README.rst
long-description-content-type = text/x-rst
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Sphinx extension for rendering data files as nice HTML
home-page = http://github.com/sphinx-contrib/datatemplates
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Documentation
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[entry_points]
console_scripts =
    test-template = sphinxcontrib.datatemplates.cli:main


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extras]
test =
    fixtures>=3.0.0
    python-subunit>=0.0.18
    testrepository>=0.0.18
    testscenarios>=0.4
    testtools>=1.4.0
    coverage!=4.4,>=4.0
    twine>=1.13.0
linter =
    flake8==3.5.0
