[metadata]
name = sphinxcontrib.datatemplates
description-file = README.rst
long-description-content-type = text/x-rst
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Sphinx extension for rendering data files as nice HTML
home-page = http://github.com/sphinx-contrib/datatemplates
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Documentation
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[entry_points]
console_scripts =
    datatemplate = sphinxcontrib.datatemplates.cli:main

[wheel]
universal = 1

[extras]
linter =
    flake8
test =
    pytest
